loading-fixes
1) add setTimeout to loader for smooth animation effect on rendering page
2) changed css overlapping for up_button & other features

--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -51,7 +51,7 @@
   bottom: 20px;
   right: 20px;
   margin-bottom: 0;
-  z-index: 999;
+  z-index: 25;
 
   &:hover,
   &:focus,
