--- a/src/sass/components/_loader.scss
+++ b/src/sass/components/_loader.scss
@@ -14,6 +14,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0,0,0,0.5);
+    z-index: 50;
 }
 
 .loader-container__is-hidden {
